--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
+  "name": "spotify-auth-proxy",
+  "version": "1.0.0",
+  "description": "Google Cloud Function backend for Spotify OAuth 2.0 Authorization Code Flow.",
+  "main": "index.js",
+  "scripts": {
+    "start": "functions-framework --target=app",
+    "deploy": "gcloud functions deploy spotifyAuth --runtime nodejs18 --trigger-http --allow-unauthenticated --entry-point app"
+  },
   "dependencies": {
     "@google-cloud/functions-framework": "^3.0.0",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "body-parser": "^1.20.1",
+    "firebase-admin": "^11.11.0",
+    "node-fetch": "^3.3.0"
   }
 }
