--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Google Cloud Function backend for Spotify OAuth 2.0 Authorization Code Flow.",
   "main": "index.js",
+  "scripts": {
+    "start": "functions-framework --target=app",
+    "deploy": "gcloud functions deploy spotifyAuth --runtime nodejs24 --trigger-http --allow-unauthenticated --entry-point app --gen2"
+  },
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
