--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "1.0.0",
   "description": "Google Cloud Function backend for Spotify OAuth 2.0 Authorization Code Flow.",
   "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "24.x"
+  }, 
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
